--- a/style.css
+++ b/style.css
@@ -201,10 +201,13 @@ li {
 
 .primary-nav a {
   color: var(--clr-neutral-400);
+  transition: color 450ms cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
-.primary-nav a:hover {
-  color: var(--clr-accent-400);
+@media (min-width: 40em) {
+  .primary-nav a:hover {
+    color: var(--clr-accent-400);
+  }
 }
 
 .subgrid a {
@@ -288,6 +291,24 @@ header {
   transform: translateX(-50%);
 }
 
+.header-img-wrapper:hover::after {
+  animation: bounce 2s cubic-bezier(0.39, 0.575, 0.565, 1);
+}
+
+@keyframes bounce {
+  0%,
+  30%,
+  65%,
+  100% {
+    transform: translate(-1.125rem, 0);
+  }
+  15%,
+  45%,
+  80% {
+    transform: translate(-1.125rem, 1rem);
+  }
+}
+
 @media (max-width: 450px) {
   header {
     min-height: 430px;
@@ -319,6 +340,7 @@ header {
   grid-column: 1 / 3;
   grid-row: 1 / 2;
   align-self: end;
+  text-transform: uppercase;
 }
 
 .header-wrapper {
@@ -411,6 +433,8 @@ header {
   }
   .btn {
     background-color: var(--clr-neutral-400);
+    transition: background-color 450ms cubic-bezier(0.215, 0.61, 0.355, 1),
+      color 450ms cubic-bezier(0.215, 0.61, 0.355, 1);
   }
   .btn:hover {
     color: var(--clr-neutral-400);
@@ -430,7 +454,7 @@ header {
   position: relative;
   transform: translateX(-150px);
   opacity: 0;
-  transition: 2s all ease;
+  transition: 1500ms all ease;
 }
 .reveal.active {
   transform: translateY(0);
@@ -441,11 +465,7 @@ header {
   position: relative;
   transform: translateX(150px);
   opacity: 0;
-  transition: 2s all ease;
-}
-.reveal-right.active {
-  transform: translateY(0);
-  opacity: 1;
+  transition: 1500ms all ease;
 }
 
 .grid-container {
@@ -522,18 +542,14 @@ header {
 .subgrid-link:after {
   content: "";
   height: 8px;
-  width: 120px;
+  width: calc(100% + 30px);
   background-color: var(--clr-accent-400);
   position: absolute;
   z-index: -1;
   bottom: 2px;
-  left: -13px;
+  left: -15px;
   border-radius: 10px;
   opacity: 0.3;
-}
-
-.subgrid-link:hover::after {
-  opacity: 0.8;
 }
 
 @media (min-width: 40em) {
@@ -544,6 +560,7 @@ header {
   }
 
   .subgrid-link:hover::after {
+    opacity: 0.8;
     transform: scaleX(1);
     transform-origin: left;
   }
@@ -653,10 +670,6 @@ header {
   padding-block: 70px;
 }
 
-.footer-flex a:hover {
-  color: var(--clr-neutral-400);
-}
-
 .footer-nav-list {
   display: flex;
   gap: 70px;
@@ -678,7 +691,20 @@ header {
   filter: contrast(200%);
 }
 
-.social-links a:hover {
-  filter: brightness(0) saturate(100%) invert(100%) sepia(99%) saturate(353%)
-    hue-rotate(276deg) brightness(120%) contrast(100%);
+@media (min-width: 40em) {
+  .footer-flex a:hover {
+    color: var(--clr-neutral-400);
+    transition: color 450ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+  .social-links a:hover img {
+    filter: brightness(0) saturate(100%) invert(100%) sepia(99%) saturate(353%)
+      hue-rotate(276deg) brightness(120%) contrast(100%);
+    transition: filter 450ms cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+}
+
+/* Blurrying on load */
+
+body {
+  filter: blur(30px);
 }
